Changed label-login to p, and avoided label wrapping

--- a/stylemfgrid.css
+++ b/stylemfgrid.css
@@ -63,6 +63,10 @@ body {
     align-items: center;
 }
 
+.p-login{
+    color:var(--footer-text-color3);
+}
+
 .div-toggle{
     width: 10vw;
     height: auto;
